@@ -14,6 +14,7 @@ Mon Jun 30 2014
    * Added check that the reference category is valid for multinomial models
    * Added check that the levels for hierarchical centring and parameter expansion are valid
    * Added check that nonlinear options are valid
+   * Added check for the response type and link function in Mixed response models
 
 2. Changes
    * Enabled matching starting values on parameter names (allowing subsets of parameters to be specified)
